--- a/form-hook-zod/.eslintrc.json
+++ b/form-hook-zod/.eslintrc.json
@@ -1,7 +1,9 @@
 {
     "env": {
         "browser": true,
-        "es2021": true
+        "es2021": true,
+        "jest": true,
+        "node": true
     },
     "settings" : {
         "react": {
@@ -12,9 +14,10 @@
         "eslint:recommended",
         "plugin:react/recommended",
         "plugin:@typescript-eslint/recommended",
+        "plugin:@typescript-eslint/eslint-recommended",
         "plugin:react-hooks/recommended",
         "prettier",
-        "plugin:prettier/recommended"
+        "plugin:pre ttier/recommended"
     ],
     "overrides": [
     ],
@@ -27,12 +30,14 @@
         "react",
         "@typescript-eslint",
         "react-hooks",
-        "'eslint-plugin-import-helpers'"
+        "'eslint-plugin-import-helpers'",
+        "testing-library"
     ],
     "rules": {
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "warn",
         "react/react-in-jsx-scope": "off",
+        "react/prop-types": "off",
         "prettier/prettier": "error",
         "import-helpers/order-imports": [
             "warn",
