--- a/form-hook-zod/.vscode/settings.json
+++ b/form-hook-zod/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
-  "editor.formatOnSave": true,
+  "editor.formatOnSave": false,
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
-  }
+  "source.fixAll.eslint": true
+  },
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "typescript.enablePromptUseWorkspaceTsdk": true,
+  "editor.tabCompletion": "on",
+  "diffEditor.codeLens": true
 }
